<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">My Application</string>
    <string name="counter_1">Counter click listener</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="result">вы получили значение</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="num1">введите число 1</string>
    <string name="num2">введите число 2</string>
    <string name="calc_button_style">Стиль моей кнопки</string>


</resources>